--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,6 @@
   "installCommand": "npm install",
   "framework": "nextjs",
   "env": {
-    "GEMINI_API_KEY": "@gemini_api_key"
+    "GEMINI_API_KEY": "AIzaSyDcq6FIjeIyWGcAddxBYVYzlmj5dY7Wvhs"
   }
 }
